# Detectors_descriptors

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/code/: main.cpp
tools/: descriptor_times.m  detector_times.m
